airflow/logs/dag_id=nba_transform_to_dwh/run_id=manual__2025-06-20T124545.901443+0000/task_id=load_dim_match/attempt=1.log
[2025-06-20T12:45:50.065+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-06-20T12:45:50.119+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_dim_match manual__2025-06-20T12:45:45.901443+00:00 [queued]>
[2025-06-20T12:45:50.136+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: nba_transform_to_dwh.load_dim_match manual__2025-06-20T12:45:45.901443+00:00 [queued]>
[2025-06-20T12:45:50.138+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 2
[2025-06-20T12:45:50.191+0000] {taskinstance.py:2330} INFO - Executing <Task(PythonOperator): load_dim_match> on 2025-06-20 12:45:45.901443+00:00
[2025-06-20T12:45:50.207+0000] {standard_task_runner.py:63} INFO - Started process 1191 to run task
[2025-06-20T12:45:50.219+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'nba_transform_to_dwh', 'load_dim_match', 'manual__2025-06-20T12:45:45.901443+00:00', '--job-id', '216', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmp7ftblw8g']
[2025-06-20T12:45:50.223+0000] {standard_task_runner.py:91} INFO - Job 216: Subtask load_dim_match
[2025-06-20T12:45:50.367+0000] {task_command.py:426} INFO - Running <TaskInstance: nba_transform_to_dwh.load_dim_match manual__2025-06-20T12:45:45.901443+00:00 [running]> on host 5ea278fdf3a6
[2025-06-20T12:45:50.584+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='nba_transform_to_dwh' AIRFLOW_CTX_TASK_ID='load_dim_match' AIRFLOW_CTX_EXECUTION_DATE='2025-06-20T12:45:45.901443+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-06-20T12:45:45.901443+00:00'
[2025-06-20T12:45:50.586+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-06-20T12:45:50.604+0000] {etl_pipeline.py:451} INFO - Ensuring dimension table 'dimmatch' exists...
[2025-06-20T12:45:50.605+0000] {etl_pipeline.py:457} ERROR - Failed to create or load dimension 'dimmatch'. Error: syntax error at or near "{"
LINE 1: CREATE TABLE IF NOT EXISTS {table_name} (
                                   ^

[2025-06-20T12:45:50.606+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-06-20T12:45:50.607+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.9/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 452, in fetch_dim_match
    cursor.execute(create_table_query)
psycopg2.errors.SyntaxError: syntax error at or near "{"
LINE 1: CREATE TABLE IF NOT EXISTS {table_name} (
                                   ^

[2025-06-20T12:45:50.622+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=nba_transform_to_dwh, task_id=load_dim_match, run_id=manual__2025-06-20T12:45:45.901443+00:00, execution_date=20250620T124545, start_date=20250620T124550, end_date=20250620T124550
[2025-06-20T12:45:50.663+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 216 for task load_dim_match (syntax error at or near "{"
LINE 1: CREATE TABLE IF NOT EXISTS {table_name} (
                                   ^
; 1191)
[2025-06-20T12:45:50.674+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-06-20T12:45:50.692+0000] {taskinstance.py:3498} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-06-20T12:45:50.721+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
